# freshrss-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: agent-sdk-architecture.md  mcp-agent-architecture.md
examples/: 01_basic_tool_use.py  02_simple_agent_loop.py  03_mcp_client.py  04_agent_sdk_basics.py  05_agent_sdk_custom_tools.py
src/freshrss_agent/: __init__.py  agent.py  agent_sdk.py  config.py  freshrss_client.py  main.py  mcp_client.py  slack_client.py  tools.py
